// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PollItem.vue when ended poll is provided as prop should render as expected 1`] = `
<article class="poll my-4 v-card v-sheet theme--light">
  <div class="v-card__title title">
    TEST
  </div>
  <div class="v-card__text">
    <p>종료된 투표입니다</p>
  </div>
</article>
`;

exports[`PollItem.vue when ongoing poll is provided as prop should render as expected 1`] = `
<article class="poll my-4 v-card v-sheet theme--light">
  <div class="v-card__title title">
    TEST
  </div>
  <div class="v-card__text">
    <dl>
      <dt><small>시작</small></dt>
      <dd>2019-06-18 06:28</dd>
      <dt><small>종료</small></dt>
      <dd>
        2019-06-19 11:00
      </dd>
    </dl>
  </div>
</article>
`;
